--- a/styles.css
+++ b/styles.css
@@ -156,23 +156,25 @@ header a.logo{
 }
 
 nav.mobileNav{
-    display: none;
-}
-
-nav.mobileNav.active{
     display: block;
     position: fixed;
     top: 0;
-    right: 0;
+    right: -290px;
     bottom: 0;
     z-index: 2;
     width: 290px;
     background-color: black;
     padding-top: 70px;
+    transition: right 0.2s ease-in-out;
 }
 
-nav.mobileNav.active a{
+nav.mobileNav.active{
+    right: 0;
+}
+
+nav.mobileNav a{
     display: block;
+    opacity: 0;
     border-bottom: 1px solid #222;
     text-transform: uppercase;
     padding: 15px;
@@ -180,6 +182,40 @@ nav.mobileNav.active a{
     text-align: right;
     font-family: sans-serif;
     padding: 16px 25px;
+    transition: opacity .03s linear;
+    transition-delay: .2s;
+}
+
+nav.mobileNav.active a{
+    opacity: 1;
+}
+
+nav.mobileNav a:nth-child(2){
+    transition-delay: .25s;
+}
+
+nav.mobileNav a:nth-child(3){
+    transition-delay: .3s;
+}
+
+nav.mobileNav a:nth-child(4){
+    transition-delay: .35s;
+}
+
+nav.mobileNav a:nth-child(5){
+    transition-delay: .4s;
+}
+
+nav.mobileNav a:nth-child(6){
+    transition-delay: .45s;
+}
+
+nav.mobileNav a:nth-child(7){
+    transition-delay: .5s;
+}
+
+nav.mobileNav a:nth-child(8){
+    transition-delay: .55s;
 }
 
 
@@ -197,12 +233,12 @@ section{
 
 section div.content{
     position: absolute;
-    bottom: 15vh;
     left: 50px;
     text-transform: uppercase;
-    max-width: 360px
-    
-
+    max-width: 360px;
+    opacity: 0;
+    bottom: 10vh;
+    transition: all .5s linear;
 }
 
 section div.content h2{
@@ -216,12 +252,44 @@ section div.content h3{
     font-family: 'Ubuntu', sans-serif ;
 }
 
-section .content a{
+section div.content a{
     border: 2px solid white;
     padding: 10px 50px;
     display: inline-block;
     text-decoration: none;
     margin-top: 20px;
+    text-transform: uppercase;
+    position: relative;
+}
+
+section div.content a:before{
+    content: '';
+    display: block;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    height: 0;
+    left: 0;
+    background-color: white;
+    transition: height 0.3s ease-in-out;
+}
+
+section div.content a:hover:before{
+    height: 100%;
+    top: initial;
+    bottom: 0;
+}
+
+section div.content a span{
+    position: relative;
+    z-index: 1;
+    transition: .3s ease-in-out;
+}
+
+section div.content a:hover span{
+    position: relative;
+    z-index: 1;
+    color: black;
 }
 
 section .content-outer{
@@ -229,6 +297,11 @@ section .content-outer{
     max-width: 1400px;
     margin: 0 auto;
     position: relative;
+}
+
+section.active div.content{
+    opacity: 1;
+    bottom: 15vh;
 }
 
 
